finished code page

--- a/movie_line_cleaning.ipynb
+++ b/movie_line_cleaning.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def idk(row):\n",
+    "def separate_rows(row):\n",
     "    lineId = row['lineId']\n",
     "    chId = row['chId']\n",
     "    mId = row['mId']\n",
